node-deployment.yml
# @format

apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: node
  template:
    metadata:
      labels:
        component: node
    spec:
      containers:
        - name: node
          image: hamzazahid/node-app
          ports:
            - containerPort: 5000
