node-deployment2.yml
# @format

apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: node
  template:
    metadata:
      labels:
        component: node
    spec:
      containers:
        - name: node
          image: hamzazahid/node-app
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: node-service
spec:
  selector:
    component: node
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
