node-service.yml
# @format

apiVersion: v1
kind: Service
metadata:
  name: node-cluster-ip-service
spec:
  type: NodePort
  selector:
    component: node
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30001
