ingress.yml
# @format

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-ingress
  # annotations:
  #   kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: node-service
                port:
                  number: 5000
